Basic theme setup.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,7 @@
       </div>
       <div class="footer-col">
         <p>{{ site.description | escape }}</p>
+        <p><small>Updated {{ site.time | date: '%B %d, %Y' }}</small></p>
       </div>
     </div>
 
