--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
             {%- endif -%}
           {%- endfor -%}
           {% endcomment %}
-          <a class="page-link" href="/">About</a>
+          <a class="page-link" href="https://sayan.page">About</a>
         </div>
       </nav>
     {%- endif -%}
