--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,2 +1,11 @@
+<!-- MathJax
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+<!-- Favicon
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}/assets/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ site.url }}/assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ site.url }}/assets/images/favicon-16x16.png">
+<link rel="manifest" href="{{ site.url }}/assets/images/site.webmanifest">
