--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
       {%- endif %}
       </div>
       <div class="footer-col">
-        <p>{{ site.description | escape }}</p>
+        <p>{{ site.description }}</p>
         <p><small>Updated {{ site.time | date: '%B %d, %Y' }}</small></p>
       </div>
     </div>
