--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -31,7 +31,7 @@
 .site-nav {
   position: absolute;
   top: 9px;
-  right: calc($spacing-unit / 2.0);
+  right: $spacing-unit * .5;
   background-color: $background-color;
   border: 1px solid $border-color-01;
   border-radius: 5px;
@@ -49,7 +49,7 @@
     padding-top: 10px;
     text-align: center;
 
-    >svg path {
+    > svg path {
       fill: $border-color-03;
     }
   }
@@ -63,12 +63,12 @@
     cursor: pointer;
   }
 
-    input~.trigger {
+  input ~ .trigger {
     clear: both;
     display: none;
   }
 
-    input:checked~.trigger {
+  input:checked ~ .trigger {
     display: block;
     padding-bottom: 5px;
   }
@@ -83,7 +83,6 @@
     &:not(:last-child) {
       margin-right: 0;
     }
-
     margin-left: 20px;
   }
 
@@ -101,7 +100,7 @@
       display: none;
     }
 
-        input~.trigger {
+    input ~ .trigger {
       display: block;
     }
 
@@ -112,7 +111,6 @@
       &:not(:last-child) {
         margin-right: 20px;
       }
-
       margin-left: auto;
     }
   }
@@ -130,7 +128,7 @@
 
 .footer-heading {
   @include relative-font-size(1.125);
-  margin-bottom: calc($spacing-unit / 2);
+  margin-bottom: $spacing-unit * .5;
 }
 
 .feed-subscribe .svg-icon {
@@ -150,7 +148,7 @@
 }
 
 .footer-col {
-  margin-bottom: calc($spacing-unit / 2);
+  margin-bottom: $spacing-unit * .5;
 }
 
 .footer-col-1,
@@ -183,16 +181,16 @@
 
   .footer-col {
     width: calc(100% - (#{$spacing-unit} / 2));
-        padding: 0 calc($spacing-unit / 2);
+    padding: 0 ($spacing-unit * .5);
 
     &:first-child {
-      padding-right: calc($spacing-unit / 2);
+      padding-right: $spacing-unit * .5;
       padding-left: 0;
     }
 
     &:last-child {
       padding-right: 0;
-      padding-left: calc($spacing-unit / 2);
+      padding-left: $spacing-unit * .5;
     }
   }
 }
@@ -219,7 +217,7 @@
   margin-left: 0;
   list-style: none;
 
-  >li {
+  > li {
     margin-bottom: $spacing-unit;
   }
 }
@@ -231,8 +229,7 @@
 
 .post-link {
   display: block;
-  font-weight: 500;
-  @include relative-font-size(1.75);
+  @include relative-font-size(1.5);
 }
 
 
@@ -249,7 +246,6 @@
   @include relative-font-size(2.625);
   letter-spacing: -1px;
   line-height: 1.15;
-  font-weight: 500;
 
   @media screen and (min-width: $on-large) {
     @include relative-font-size(2.625);
@@ -259,17 +255,7 @@
 .post-content {
   margin-bottom: $spacing-unit;
 
-  h1,
-    h2,
-    h3 {
-      margin-top: $spacing-unit * 2
-    }
-  
-    h4,
-    h5,
-    h6 {
-      margin-top: $spacing-unit
-    }
+  h1, h2, h3, h4, h5, h6 { margin-top: $spacing-unit }
 
   h2 {
     @include relative-font-size(1.75);
@@ -294,7 +280,6 @@
   h5 {
     @include relative-font-size(1.125);
   }
-
   h6 {
     @include relative-font-size(1.0625);
   }
@@ -304,20 +289,15 @@
 .social-media-list {
   display: table;
   margin: 0 auto;
-
   li {
     float: left;
     margin: 5px 10px 5px 0;
-&:last-of-type {
-    margin-right: 0
-  }
+    &:last-of-type { margin-right: 0 }
     a {
       display: block;
-      padding: calc($spacing-unit / 4);
+      padding: 10px 12px;
       border: 1px solid $border-color-01;
-&:hover {
-    border-color: $border-color-02
-  }
+      &:hover { border-color: $border-color-02 }
     }
   }
 }
@@ -330,18 +310,15 @@
 .pagination {
   margin-bottom: $spacing-unit;
   @extend .social-media-list;
-
   li {
-a,
-  div {
+    a, div {
       min-width: 41px;
       text-align: center;
       box-sizing: border-box;
     }
-
     div {
       display: block;
-      padding: calc($spacing-unit / 4);
+      padding: $spacing-unit * .25;
       border: 1px solid transparent;
 
       &.pager-edge {
