--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,2 +1,2 @@
 // Placeholder to allow overriding predefined variables smoothly.
-$header-border-color: rgb(255,193,7);
+$header-border-color: rgb(255, 193, 7);
