update to minima v3

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="{{ 'feed.xml' | relative_url }}">
+          <a href="{{ site.feed.path | default: 'feed.xml' | absolute_url }}">
             <svg class="svg-icon orange">
               <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
             </svg><span>Subscribe</span>
@@ -24,7 +24,7 @@
       {%- endif %}
       </div>
       <div class="footer-col">
-        <p>{{ site.description }}</p>
+        <p>{{ site.description | escape }}</p>
         <p><small>Updated {{ site.time | date: '%B %d, %Y' }}</small></p>
       </div>
     </div>
